--- a/styleTextPage.css
+++ b/styleTextPage.css
@@ -39,7 +39,7 @@ header > aside a.linkHomePage{
 	font: 13px/18px arial, tahoma, verdana, sans-serif;
 	color: #019973;
 	text-decoration: underline;
-	background: url(..icon-house.png) no-repeat top left;
+	background: url(icon-house.png) no-repeat top left;
 }
 header > aside a.linkHomePage:hover{
 	text-decoration: none
@@ -85,7 +85,7 @@ header div.contacts > div.phone span.title{
 	font: 23px arial, tahoma, verdana, sans-serif;
 	color: #296d47;
 	text-transform: uppercase;
-	background: url(..sprite.png) no-repeat -10px -10px;
+	background: url(sprite.png) no-repeat -10px -10px;
 }
 header div.contacts > div.phone span.number{
 	display: block;
@@ -109,7 +109,7 @@ header div.contacts > div.email span.title{
 	font: 16px arial, tahoma, verdana, sans-serif;
 	color: #296d47;
 	text-transform: uppercase;
-	background: url(..sprite.png) no-repeat -10px -68px;
+	background: url(sprite.png) no-repeat -10px -68px;
 }
 header div.contacts > div.email a{
 	display: block;
@@ -148,16 +148,16 @@ header div.userLinks div.socialLink a.skype{
 	transition: opacity 0.1s;
 }
 header div.userLinks div.socialLink a.facebook{
-	background: url(..sprite.png) no-repeat -139px -128px;
+	background: url(sprite.png) no-repeat -139px -128px;
 }
 header div.userLinks div.socialLink a.twitter{
-	background: url(..sprite.png) no-repeat -171px -128px;
+	background: url(sprite.png) no-repeat -171px -128px;
 }
 header div.userLinks div.socialLink a.google{
-	background: url(..sprite.png) no-repeat -238px -128px;
+	background: url(sprite.png) no-repeat -238px -128px;
 }
 header div.userLinks div.socialLink a.vk{
-	background: url(..sprite.png) no-repeat -205px -128px;
+	background: url(sprite.png) no-repeat -205px -128px;
 }
 header div.userLinks div.socialLink a.skype:hover{
 	opacity: 0.6;
